@@ -882,16 +882,18 @@ BEGIN
     LTEXT           "&Surface",-1,7,37,26,9
 END
 
-IDD_PROPLIGHT_STATE DIALOGEX 0, 0, 125, 58
+IDD_PROPLIGHT_STATE DIALOGEX 0, 0, 125, 73
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     COMBOBOX        DISPID_Light_State,33,7,85,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     EDITTEXT        9,51,23,67,12,ES_AUTOHSCROLL
     EDITTEXT        DISPID_Light_BlinkInterval,51,38,67,12,ES_AUTOHSCROLL
-    LTEXT           "S&tate",-1,7,9,25,8
-    LTEXT           "Blink &Pattern",-1,7,25,43,9
-    LTEXT           "Blink Inter&val",-1,7,40,41,9
+    LTEXT           "S&tate",IDC_STATIC,5,9,25,8
+    LTEXT           "Blink &Pattern",IDC_STATIC,5,25,43,9
+    LTEXT           "Blink Inter&val",IDC_STATIC,5,40,41,9
+    LTEXT           "Duration",IDC_STATIC,5,56,28,8
+    EDITTEXT        DISPID_Light_BlinkDuration,51,54,67,12,ES_AUTOHSCROLL
 END
 
 IDD_PROPBUMPER_PHYSICS DIALOGEX 0, 0, 125, 61
@@ -2246,6 +2248,11 @@ BEGIN
     IDD_PROPLIGHT_VISUALS, DIALOG
     BEGIN
         BOTTOMMARGIN, 221
+    END
+
+    IDD_PROPLIGHT_STATE, DIALOG
+    BEGIN
+        BOTTOMMARGIN, 71
     END
 
     IDD_PROPBUMPER_PHYSICS, DIALOG
