@@ -1,5 +1,6 @@
 VP 10.2.0 Changelog
 ------------------------
+- add command "Duration" to the light element. If the duration is >0 the light will switch off after the defined milliseconds if the state was 1=on or 2=blinking. A duration=0 let the light be on/blinking forever.
 
 - under Video Preferences you can define a waiting time after which VP will do a alt+tab simulation for bringing the VP player back into exclusive fullscreen mode.
 
